--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@metacentre/jitdb-query",
   "version": "1.0.0",
   "description": "ssb-db2 queries via graphql",
-  "main": "index.js",
+  "main": "jitdb-query.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
