--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.3.2",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "pull-stream": "^3.6.14",
     "ssb-db2": "^2.1.5"
   }
 }
